--- a/index.html
+++ b/index.html
@@ -1,2 +1,77 @@
-welcome to index
-im addin a second file
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FORM</title>
+    <style>
+        input {
+            color: blue;
+        }
+    </style>
+</head>
+<body>
+    <form>
+        First name: <input type="text" placeholder="First name"><br><br>
+        Last name: <input type="text" value="Last name"><br><br>
+        <input type="radio">Male <br>
+        <input type="radio">Female <br><br>
+        <input type="password" placeholder="password"><br><br>
+        <input type="file"><br><br>
+        <input type="date"><br><br>
+        <input type="submit"><br><br>
+        <textarea name="About  you" id="About you" cols="100" rows="10">About you</textarea>
+        <select>
+            <option>Country</option>
+            <option>Niger</option>
+            <option>Benin</option>
+        </select>
+
+    </form>
+
+    <form>
+        <h2>Classwork</h2><br><br>
+        Last name: <input type="text" placeholder="Last name"><br><br>
+        Gender:<br></Gender:br><input type="radio">Male<br>
+               <input type="radio">Female <br><br>
+        Date of birth: <input type="date"><br><br>
+        Phone number: <select> <option>+234</option> </select><input type="number"><br><br>
+        Email: <input type="text" placeholder="user@email.com"><br><br>
+        Favourite colour: <input type="color"><br><br>
+        Favourite food: <select> <option>Food</option>
+                                 <option>Bread</option>
+                                 <option>Eggs</option>
+                                 <option>Beans</option>       
+                        </select>     <br><br>
+                        <textarea name="About you" id="" cols="30" rows="10">About you</textarea><br><br>
+                        <input type="submit">
+                    </form>
+
+                    <form>
+                        <iframe frameborder="3" width="500" height="200" name="frame"></iframe>
+                            <p><a href="tables.html" target="frame">Table</a>
+                                <a href="Index.html" target="frame">Index</a>
+                               
+                        </p>
+                    </form>
+                    <video src="Palm.mp4" controls></video><br><br>
+
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Za5e8ToLrGI" 
+                    title="YouTube video player" frameborder="0" allow="accelerometer; 
+                    autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+                    <svg width="100" height="100">
+                        <circle cx="50" cy="50" r="40" stroke="green" stroke width="4" fill="yellow" />
+                    </svg> 
+
+                    <svg width="200" height="300">
+                        <circle cx="70" cy="70" r="60" stroke="brown" stroke width="3" fill="red"/>
+                    </svg>
+
+                    <audio src="sweet.mp3" controls></audio>
+
+
+    
+</body>
+</html>
